--- a/templates/group.ejs
+++ b/templates/group.ejs
@@ -22,7 +22,7 @@
                             <i class="material-icons circle">note</i>
                             <span class="title"><%= pads[i].name %></span><br/>
                             <span class="subtitle"><%= pads[i].lastedit %></span>
-                            <% if (isOwner) { %>
+                            <% if (isOwner || settings.allow_group_users_manage_pads) { %>
                             <span class="secondary-content">
                                 <i title="<%= lang('Delete Pad') %>" data-padname="<%= pads[i].name %>" data-groupid="<%= groupID %>" class="material-icons pad-delete clickable">delete</i>
                             </span>
@@ -36,7 +36,7 @@
                 </ul>
             </div>
             <div class="col s12 m6">
-                <% if (isOwner) { %>
+                <% if (isOwner || settings.allow_group_users_manage_pads) { %>
                 <ul class="collection with-header">
                     <li class="collection-header"><h4><%= lang('Create Group Pad') %></h4></li>
                     <li>
